<resources>
    <string name="app_name">MadLevel5Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_hint">Title</string>
    <string name="platform_hint">Platform</string>
    <string name="day_hint">Day</string>
    <string name="month_hint">Month</string>
    <string name="year_hint">Year</string>
    <string name="delete_all_games">Delete all games</string>
</resources>